# multitude

./: .editorconfig  .spelling  CHANGELOG.md  Cargo.toml  LICENSE  PERF.md  README.md  constants.env
.github/actions/setup/: action.yml
.github/workflows/: main.yml  release.yml
benches/: alloc_compare.rs  criterion_alloc.rs  criterion_drop.rs  gungraun_alloc.rs  gungraun_drop.rs
examples/: alloc_ref.rs  basic.rs  custom_allocator.rs  strings.rs
scripts/: build_perf_report.py  loom.sh  perf_report.sh
src/: allocator_impl.rs  arc.rs  arc_str.rs  arc_utf16_str.rs  arena.rs  arena_arc.rs  arena_arc_str.rs  arena_box.rs  arena_builder.rs  arena_handle_macros.rs  arena_inner.rs  arena_rc.rs  arena_rc_str.rs  arena_stats.rs  arena_str_helpers.rs  arena_str_macros.rs  arena_string.rs  arena_vec.rs  box.rs  box_str.rs  box_utf16_str.rs  chunk_header.rs  chunk_ref.rs  chunk_sharing.rs  chunk_size_class.rs  collect_in.rs  constants.rs  drop_entry.rs  dst_helpers.rs  entry_layout.rs  flavor.rs  format_macro.rs  lib.rs  owned_chunk.rs  pending_arena_arc.rs  pending_arena_rc.rs  raw_handle.rs  rc.rs  rc_str.rs  rc_utf16_str.rs  (+3 more)
src/builders/: collect_in.rs  format_macro.rs  format_utf16_macro.rs  from_iterator_in.rs  mod.rs  string.rs  utf16_string.rs  vec.rs  vec_macro.rs
src/dst/: helpers.rs  mod.rs  pending_arc.rs  pending_box.rs  pending_macro.rs  pending_rc.rs
tests/: alloc_reentrancy.rs  alloc_ref.rs  allocator_impl.rs  arena.rs  arena_arc.rs  arena_box.rs  arena_box_str.rs  arena_drop_reentrancy.rs  arena_rc.rs  arena_str.rs  arena_string.rs  arena_vec.rs  conversions.rs  coverage.rs  drop_behavior.rs  dst.rs  dst_box.rs  format_macro.rs  loom_arc.rs  reset.rs  serde.rs  utf16_coverage.rs  utf16_cross_thread.rs  utf16_format.rs  utf16_serde.rs  utf16_smoke.rs  utf16_string_builder.rs
tests/common/: mod.rs
